# encryption

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: encryption.h
src/: encryption.cpp  main.cpp
